--- a/taks/page_app/templates/page_app/partial/header.html
+++ b/taks/page_app/templates/page_app/partial/header.html
@@ -4,7 +4,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img src="img/logo.png" alt="Logo"
+            <a class="navbar-brand" href="/"><img src="static/page_app/img/logo.png" alt="Logo"
                     class="rounded-circle" width="30"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
