--- a/taks/page_app/templates/page_app/partial/home.html
+++ b/taks/page_app/templates/page_app/partial/home.html
@@ -1,3 +1,4 @@
+<div id="topo"></div>
 {% extends "page_app/global/index.html" %}
 
 {% load static %}
@@ -5,6 +6,7 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
+
 <div class="container mt-4 mb-4 p-5">
 
     <hr class="featurette-divider">
